Ajustes login e projetos
Criação de função logout
Ajustes erros em api key
Finalização versão 1 de projetos